# db-tools

./: .gitignore  README.md  dev.db  fresh.db  pyproject.toml
src/db_tools/: main.py  tui.css  tui.py
src/db_tools/core/: config_loader.py  database.py  dependency_resolver.py  faker_manager.py  models.py  processor.py  translator.py
src/db_tools/locales/: strings.json
tests/: test_faker_manager.py
